💄 📱 add water.css and magic responsive tag

--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
 <h1>The Queen's Gambit</h1>
 Serverless Backend for the Westworld Challenge. Created and hosted with Vercel Serverless Functions.
